# procurement-data-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: cleaning_rules.md  data_profile.md
scripts/: download_data.md  profile_raw.py  run_pipeline.py
sql/00_init/: 01_schemas.sql  02_raw_purchase_orders.sql  03_staging_rejected_rows.sql
sql/10_staging/: 01_helpers.sql  02_purchase_orders_table.sql  03_purchase_orders_load.sql
sql/20_transform/: 01_supplier_canonical.sql  02_unspsc_codes.sql  03_purchase_orders_enriched.sql  04_po_classification.sql
sql/30_marts/: 01_dim_date.sql  02_dim_department.sql  03_dim_supplier.sql  04_dim_unspsc.sql  05_fact_purchase_orders.sql  06_bridge_po_classification.sql  07_views.sql
src/pdp/: __init__.py  config.py  db.py  profiling.py
src/pdp/api/: __init__.py
src/pdp/export/: __init__.py
src/pdp/nl2sql/: __init__.py
src/pdp/pipeline/: __init__.py  load.py  runner.py
src/pdp/validation/: __init__.py
tests/: test_smoke.py
tests/fixtures/: sample_purchase_orders.csv
tests/pdp/: test_profiling.py
tests/pdp/pipeline/: conftest.py  test_load.py  test_marts_integration.py  test_staging_integration.py  test_transform_integration.py
