[project]
name = "pdp"
version = "0.1.0"
description = "Procurement Data Platform — SQL pipeline, data-quality validation, NL2SQL and analytics over California State Purchase Order data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.9",
    "pre-commit>=4.0",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pdp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
]

[tool.ruff.lint.isort]
known-first-party = ["pdp"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --cov=src/pdp --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/pdp"]
